<resources>
    <string name="app_name">LangLearn</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <string name="back4app_app_id">VMW0uqedh8cVTF5ZduWnLj7cXzLOszHghM0BafeU</string>
    <string name="back4app_client_key">txeHzLtmdP8la62YKmGuker7Q4pzwIWU6KS2jBD6</string>
    <string name="papago_client_id">TpknL16lHWDKMusB4A2n</string>
    <string name="papago_client_key">zf79887h_w</string>
    <string name="profile_label">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="google_user_id">742932088080-u851p4go66no359g6jhrmf61h8tmm9pv.apps.googleusercontent.com</string>
    <string name="language">Language</string>
    <string name="url">URL</string>
    <string name="profileimg">Profile Img</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>

</resources>