<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/profile_logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:width="200dp"
            android:height="48dp"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_update_button" />

        <TextView
            android:id="@+id/profile_img_text"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/profileimg"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_lang_text" />

        <TextView
            android:id="@+id/profile_greeting_text"
            android:layout_width="203dp"
            android:layout_height="76dp"
            android:layout_marginTop="68dp"
            android:gravity="center"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.312"
            app:layout_constraintStart_toEndOf="@+id/profile_img"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />


        <Button
            android:id="@+id/profile_update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:width="200dp"
            android:height="48dp"
            android:text="@string/update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_img_edit" />

        <TextView
            android:id="@+id/profile_lang_text"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@string/language"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_img" />

        <Spinner
            android:id="@+id/profile_lang_spinner"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="120dp"
            app:layout_constraintStart_toEndOf="@+id/profile_lang_text"
            app:layout_constraintTop_toBottomOf="@+id/profile_img" />

        <EditText
            android:id="@+id/profile_img_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="48dp"
            android:width="200dp"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/url"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/profile_img_text"
            app:layout_constraintTop_toBottomOf="@+id/profile_lang_spinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>